# Nexus-AI

./: .dockerignore  .env.example  .gitignore  ADMET_Literature_Review_Structure.md  ADMET_Mathematical_Evaluation.md  ADMET_Papers_Analysis_Framework.md  AGENT-ARTIFACTS-TABLE-FIX.md  AGENT-CODE-GENERATION-ISSUE-REPORT.md  BUILDSTAGE-ENUM-FIX.md  CODEBUILD-DEPLOYMENT-FIX.md  DEPLOYMENT.md  DYNAMODB-FIXES-COMPLETE.md  MODULE_LOADING_FIX.md  NEXUS_AI_SYSTEM_GUIDE.md  PYTHON_PATH_FIX.md  README.md  README_EN.md  __init__.py  admet_benchmarking_framework.md  admet_data_extraction_protocol.md  admet_drug_discovery_integration.md  admet_literature_review_timeline.md  admet_mathematical_foundations.md  admet_review_implementation_strategy.md  admet_trend_analysis_framework.md  agent_summary.tsv  api调用.md  aws_ec2_8vcpu_32gb_报价方案.md  aws_ec2_pricing_proposal.txt  clear_dynamodb.py  deploy.md  deploy_kids_chat_companion.py  docker-compose.yml  example_usage.py  fix_python_paths.py  nexus-cli  nohup.out  otel-collector-config.yaml  path_setup.py  pyproject.toml  (+18 more)
.kiro/: update_tools_readme.py
api/: .dockerignore  DYNAMODB-RUNTIME-FIXES.md  Dockerfile  __init__.py  docker-compose.yml  main.py  requirements.txt
config/: agent_templates_config.yaml  default_config.yaml  logging_config.yaml  nexus_ai_base_rule.yaml  workflows.yaml
docs/: API_USAGE_EXAMPLES.md  DEPLOYMENT_READINESS_REPORT.md  MONITORING_AND_LOGGING.md  README.md  VIBE_CODING_AGENT_BUILD_TEMPLATE.md  file_validation_implementation.md  magician_agent_usage_guide.md  magician_build_functions_usage.md  nexus-cli-使用示例.md  (+8 more)
(+2210 files in other folders)
