[project]
name = "nexus-ai"
version = "0.1.0"
description = "Nexus-AI: Enterprise-grade AI agent development platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "strands-agents",
    "strands-agents-tools", 
    "bedrock-agentcore",
    "boto3",
    "PyYAML",
    "Pillow>=10.0.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "python-docx>=1.1.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "utils", "tools", "prompts", "config"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
