[project]
name = "nexus-ai"
version = "0.1.0"
description = "Nexus-AI: Enterprise-grade AI agent development platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "strands-agents",
    "strands-agents-tools", 
    "bedrock-agentcore",
    "boto3",
    "PyYAML",
    "feedparser",
    "colorama"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "nexus_utils", "tools", "prompts", "config"]
